# periodical

./: .gitignore  CODE_FORMATTING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md  WORKFLOW.md  branch-changelog.md  code_formatting.md  rustfmt.toml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-suggestion.yml  02-bug-report.yml
.github/workflows/: rust.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: abridge_2nd_degree_complement_of_bounded_interval.rs  abridge_2nd_degree_complement_of_closed_interval.rs  abs_to_rel_conversions.rs  creating_abs_bounds.rs  creating_rel_bounds.rs  overlap_half_bounded_complement.rs  overlap_half_open.rs  overlap_half_open_complement.rs
src/: arbitrary_impl.rs  collections.rs  intervals.rs  iter.rs  lib.rs  ops.rs  ops_tests.rs  prelude.rs  set_ops.rs  test_data.rs  test_utils.rs  time.rs  time_constants.rs  time_tests.rs  utils.rs
src/arbitrary_impl/: absolute.rs  intervals.rs  relative.rs
src/collections/: interval_iter.rs  interval_ops.rs  intervals.rs  set_ops.rs
src/collections/intervals/: bounds.rs  bounds_tests.rs  complement.rs  complement_tests.rs  layered_bounds.rs  layered_bounds_set_ops.rs  layered_bounds_tests.rs  precision.rs  precision_tests.rs  relativity_conversion.rs  relativity_conversion_tests.rs  remove_empty.rs  remove_empty_tests.rs  set.rs  set_ops.rs  united_bounds.rs  united_bounds_tests.rs  united_set.rs  united_set_tests.rs
src/collections/intervals/layered_bounds_set_ops/: diff.rs  diff_tests.rs  intersect.rs  intersect_tests.rs  sym_diff.rs  sym_diff_tests.rs  unite.rs  unite_tests.rs
src/collections/intervals/set_ops/: diff.rs  diff_tests.rs  intersect.rs  intersect_tests.rs  sym_diff.rs  sym_diff_tests.rs  unite.rs  unite_tests.rs
src/intervals/: absolute.rs  absolute_tests.rs  bound_position.rs  bound_position_tests.rs  comparison.rs  convenience.rs  interval.rs  meta.rs  meta_tests.rs  ops.rs  prelude.rs  relative.rs  relative_tests.rs  set_ops.rs  set_ops_impl.rs  special.rs  special_tests.rs
src/intervals/absolute/: bound.rs  bound_pair.rs  bound_pair_tests.rs  bound_tests.rs  bounded_interval.rs  bounded_interval_tests.rs  emptiable_bound_pair.rs  emptiable_bound_pair_tests.rs  emptiable_interval.rs  emptiable_interval_tests.rs  end_bound.rs  end_bound_tests.rs  finite_bound.rs  finite_bound_position.rs  finite_bound_position_tests.rs  finite_bound_tests.rs  finite_end_bound.rs  finite_end_bound_tests.rs  finite_start_bound.rs  finite_start_bound_tests.rs  half_bounded_interval.rs  half_bounded_interval_tests.rs  half_bounded_to_future_interval.rs  half_bounded_to_future_interval_tests.rs  half_bounded_to_past_interval.rs  half_bounded_to_past_interval_tests.rs  interval.rs  interval_tests.rs  start_bound.rs  start_bound_tests.rs
src/intervals/convenience/: absolute.rs  relative.rs
src/intervals/convenience/absolute/: bounded_interval.rs  bounded_interval_tests.rs  half_bounded_interval.rs  half_bounded_interval_tests.rs
src/intervals/ops/: abridge.rs  abridge_tests.rs  bound_cmp.rs  bound_containment.rs  bound_containment_tests.rs  bound_ord.rs  bound_ord_tests.rs  bound_overlap_ambiguity.rs  bound_overlap_ambiguity_tests.rs  bound_position.rs  complement.rs  complement_tests.rs  continuation.rs  continuation_tests.rs  cut.rs  cut_tests.rs  extend.rs  extend_tests.rs  fill_gap.rs  fill_gap_tests.rs  grow.rs  grow_tests.rs  overlap.rs  overlap_position.rs  overlap_tests.rs  point_containment.rs  point_containment_tests.rs  precision.rs  precision_tests.rs  prelude.rs  relativity_conversion.rs  relativity_conversion_tests.rs  remove_overlap.rs  remove_overlap_or_gap.rs  remove_overlap_or_gap_tests.rs  remove_overlap_tests.rs  set_ops.rs  set_ops_tests.rs  shrink.rs  shrink_tests.rs  (+6 more)
src/intervals/ops/bound_cmp/: bound_eq.rs  bound_eq_tests.rs  bound_ord.rs  bound_ord_tests.rs
src/intervals/ops/precision/: absolute.rs  relative.rs
src/intervals/ops/set_ops/: diff.rs  diff_tests.rs  intersect.rs  intersect_tests.rs  sym_diff.rs  sym_diff_tests.rs  unite.rs  unite_tests.rs
src/intervals/relative/: bound.rs  bound_pair.rs  bound_pair_tests.rs  bound_tests.rs  bounded_interval.rs  bounded_interval_tests.rs  emptiable_bound_pair.rs  emptiable_bound_pair_tests.rs  emptiable_interval.rs  emptiable_interval_tests.rs  end_bound.rs  end_bound_tests.rs  finite_bound.rs  finite_bound_position.rs  finite_bound_position_tests.rs  finite_bound_tests.rs  finite_end_bound.rs  finite_end_bound_tests.rs  finite_start_bound.rs  finite_start_bound_tests.rs  half_bounded_interval.rs  half_bounded_interval_tests.rs  half_bounded_to_future_interval.rs  half_bounded_to_future_interval_tests.rs  half_bounded_to_past_interval.rs  half_bounded_to_past_interval_tests.rs  interval.rs  interval_tests.rs  start_bound.rs  start_bound_tests.rs
src/iter/: intervals.rs
src/iter/intervals/: bounds.rs  bounds_tests.rs  complement.rs  complement_tests.rs  layered_bounds.rs  layered_bounds_set_ops.rs  layered_bounds_tests.rs  precision.rs  precision_tests.rs  relativity_conversion.rs  remove_empty.rs  remove_empty_tests.rs  set_ops.rs  split.rs  united_bounds.rs  united_bounds_tests.rs
src/iter/intervals/layered_bounds/: abs_state_change.rs  abs_state_change_tests.rs  absolute.rs  absolute_tests.rs  rel_state_change.rs  rel_state_change_tests.rs  state.rs  (+3 more)
src/test_data/: bound_overlap.rs  interval_overlap.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+24 files in other folders)
