[package]
name = "periodical"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"
description = "Management of all kinds of time intervals, use it to manage schedules, find overlaps, and more!"
documentation = "https://docs.rs/periodical"
repository = "https://github.com/maeldroem/periodical"
license = "BSD-3-Clause"
keywords = ["interval", "ranges", "time"]
categories = ["date-and-time"]

[workspace]
resolver = "3"
members = ["fuzz", "xtask"]

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
jiff = "0.2.21"
serde = { version = "1.0.225", features = ["derive"], optional = true }

[features]
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde", "jiff/serde"]

[lints.clippy]
complexity = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
