[package]
name = "periodical-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "creating_abs_bounds"
path = "fuzz_targets/creating_abs_bounds.rs"
test = false

[[bin]]
bench = false
doc = false
name = "creating_rel_bounds"
path = "fuzz_targets/creating_rel_bounds.rs"
test = false

[[bin]]
bench = false
doc = false
name = "abs_to_rel_conversions"
path = "fuzz_targets/abs_to_rel_conversions.rs"
test = false

[[bin]]
bench = false
doc = false
name = "overlap_half_bounded_complement"
path = "fuzz_targets/overlap_half_bounded_complement.rs"
test = false

[[bin]]
bench = false
doc = false
name = "abridge_2nd_degree_complement_of_bounded_interval"
path = "fuzz_targets/abridge_2nd_degree_complement_of_bounded_interval.rs"
test = false

[dependencies]
jiff = "0.2.21"
libfuzzer-sys = "0.4"

[dependencies.periodical]
path = ".."
features = ["arbitrary"]

[lints.clippy]
complexity = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
